--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kungpaogao.github.io",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "feather-icons": "^4.24.0",
+    "inter-ui": "^3.9.0",
+    "postcss": "^7.0.17",
+    "postcss-import": "^12.0.1",
     "tailwindcss": "^1.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
@@ -23,8 +27,6 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
