--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "feather-icons": "^4.24.1",
+    "firebase": "^7.6.0",
     "inter-ui": "^3.10.0",
     "postcss": "^7.0.18",
     "postcss-import": "^12.0.1",
